// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`addUDFHelper basic declaration 1`] = `"function _declaration() { console.log(\\"declaration\\"); }"`;

exports[`addUDFHelper basic dependencies 1`] = `
"function _dependencies() { _child() || _child2(); }

;

function _child2() { _grandchild(); }

;

function _grandchild() { return \\"grandchild\\"; }

;

function _child() { return \\"child\\"; }

;"
`;

exports[`addUDFHelper basic multi plugins 1`] = `
"function _dependencies2() { _child3() || _child4(); }

;

function _child4() { _grandchild2(); }

;

function _grandchild2() { return \\"grandchild\\"; }

;

function _child3() { return \\"child\\"; }

;

function _dependencies() { _child() || _child2(); }

;

function _child2() { _grandchild(); }

;

function _grandchild() { return \\"grandchild\\"; }

;

function _child() { return \\"child\\"; }

;"
`;

exports[`addUDFHelper basic multi plugins 2`] = `"UDF helper: 'dependencies' is used in babel-udf-helpers-test-0, babel-udf-helpers-test-1"`;

exports[`addUDFHelper basic rename 1`] = `
"function _rename2() { console.log(\\"rename\\"); }

function _rename() {
  return \\"path.replaceWith\\";
}"
`;

exports[`listUDFHelper basic officialMix 1`] = `
Object {
  "available": Array [
    "officialMix",
    "child1",
    "child2",
    "grandchild",
  ],
  "unavailable": Array [
    "objectWithoutPropertiesLoose",
    "objectWithoutProperties",
  ],
}
`;
